# clutter_segmentation

action_manager_msgs/: mainpage.dox  manifest.xml
action_manager_msgs/msg/: Arm.msg  Controller.msg  Gripper.msg  Head.msg
action_manager_pr2/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
action_manager_pr2/action/: Controller.action
action_manager_pr2/launch/: kinect-perception.launch  laser-perception.launch  move_arm.launch  move_arm.launch~
action_manager_pr2/nodes/: joint_state_listener_server.py
action_manager_pr2/src/: point_head.cpp  pr2_action_interface.cpp  simple_gripper.cpp
active_segmentation/: CMakeLists.txt  mainpage.dox  manifest.xml
active_segmentation/include/active_segmentation/: active_segmentation.hpp  graph_module.hpp  macros_time.hpp
active_segmentation/src/: active_segmentation.cpp  graph_module.cpp
dlib_wrapper/: CMakeLists.txt  mainpage.dox  manifest.xml
ekf_rl_matlab/: mainpage.dox  manifest.xml
ekf_rl_matlab/src/: accumulate_features.m  action_a_1.mat  action_a_2.mat  action_a_3.mat  action_a_4.mat  action_weights.mat  ex_X  (+10 more)
feature_learning/: CMakeLists.txt  CMakeLists_old.txt  mainpage.dox  manifest.xml  manifest_old.xml
feature_learning_pr2/: CMakeLists.txt  mainpage.dox  manifest.xml
graph_based_segmentation/: .cproject  .project  .pydevproject  CMakeLists.txt  CMakeLists.txt~  cmake_install.cmake  mainpage.dox  manifest.xml  output.ppm  rgb.ppm
graph_module/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
icra2014/: Makefile  main.aux.make  main.auxbbl.make  main.auxtarget.make  main.d  main.fls  main.tex
ncuts-evh/: Makefile  README
simple_robot_control/: CMakeLists.txt  manifest.xml
static_segmentation/: CMakeLists.txt  mainpage.dox  manifest.xml
(+169 files in other folders)
